# turtlebot3_automapping

./: README.md  areamapping.py  map.pgm  map.yaml
m-explore/explore/include/explore/: explore.h
m-explore/explore/src/: explore.cpp
turtlebot3_automapping/: CMakeLists.txt  LICENSE  package.xml
turtlebot3_automapping/config/: gmapping_params.yaml
turtlebot3_automapping/gazebo/Wall/: model.sdf
turtlebot3_automapping/gazebo/chair/: model.config  model.sdf
turtlebot3_automapping/gazebo/chair_with_table/: model.config  model.sdf
turtlebot3_automapping/gazebo/chairs_10/: model.config  model.sdf
turtlebot3_automapping/gazebo/room_v2/: model.config  model.sdf
turtlebot3_automapping/gazebo/round_table/: model.config  model.sdf
turtlebot3_automapping/gazebo/round_table_with_chairs/: model.config  model.sdf
turtlebot3_automapping/gazebo/round_table_with_chairs_1.5m/: model.config  model.sdf
turtlebot3_automapping/gazebo/table_5chairs/: model.config  model.sdf
turtlebot3_automapping/launch/: explore_costmap.launch  gazebo.launch  move_base.launch  slam.launch
turtlebot3_automapping/param/: costmap_common_params.yaml
turtlebot3_automapping/rviz/: navigation.rviz
turtlebot3_automapping/scripts/: movetopoint.py
turtlebot3_automapping/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
turtlebot3_automapping/worlds/: room.world  room_with_furniture.world
